--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>John Leonardo : Software Engineer</title>
+    <style>
+      body {
+        background-color: #050505;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
