--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;600;700&family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;600;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,500&display=swap" rel="stylesheet"> 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -29,7 +29,8 @@
     <title>John Leonardo : Software Engineer</title>
     <style>
       body {
-        background-color: #050505;
+        background-color: #fff;
+        text-align: center;
       }
     </style>
   </head>
