--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,24 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Default Statcounter code for personal site https://jdleo.me -->
+    <script type="text/javascript">
+      var sc_project = 12499334;
+      var sc_invisible = 1;
+      var sc_security = 'dd8d4d08';
+      var sc_https = 1;
+    </script>
+    <script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async></script>
+    <noscript
+      ><div class="statcounter">
+        <a title="Web Analytics" href="https://statcounter.com/" target="_blank"
+          ><img
+            class="statcounter"
+            src="https://c.statcounter.com/12499334/0/dd8d4d08/1/"
+            alt="Web
+  Analytics"
+        /></a></div
+    ></noscript>
+    <!-- End of Statcounter Code -->
   </body>
 </html>
