make meta changes

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,24 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
     <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+      meta content
     -->
+    <meta
+      name="description"
+      content="A software engineer and computer science graduate with industry experience in Java, Javascript, Python, and Go. Experience with working on complex, globally distributed systems."
+    />
+    <meta name="title" property="og:title" content="John Leonardo : Software Engineer" />
+    <meta property="og:type" content="website" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/linkPreview.png" />
+    <meta
+      name="description"
+      property="og:description"
+      content="A software engineer and computer science graduate with industry experience in Java, Javascript, Python, and Go. Experience with working on complex, globally distributed systems."
+    />
+    <meta name="author" content="John Leonardo" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- google fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;600;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,500&display=swap"
