--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style="background-color: #000000">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
